# node-identification

./: CMakeLists.txt  LICENSE  README.md
include/: NodeIdentification.hpp
src/: NodeIdentification.cpp
